# monero_c

./: .env  .gitignore  .gitmodules  Makefile  README.md  VERSION  android64.Dockerfile  apply_patches.sh  build_monero.sh  build_single.sh  description-pak  download_artifact.sh  generate_checksum.sh  renovate.json  save_artifact.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: android.yml  build.yml  cake_wallet.yaml  checksum.yaml  compat.yaml  dart_bindings.yaml  dependencies_matches.yaml  docs.yaml  full_check.yaml  linux.yml  pr-comment.yaml  regression.yaml  xmruw.yaml
.woodpecker/: linux.yaml
contrib/depends/: Makefile  funcs.mk  toolchain.cmake.in
contrib/depends/builders/: darwin.mk  default.mk
contrib/depends/hosts/: android.mk  darwin.mk  ios.mk  linux.mk
docs/: update_screenshot.sh
docs/Writerside/: in.tree
example/cmake/: CMakeLists.txt
impls/monero.c#/: README.md  monero_wrapper.cs
impls/monero.dart/: .gitignore  README.md  ffigen_monero.yaml  ffigen_wownero.yaml  ffigen_zano.yaml  monero_wallet2_api_c.h  pubspec.yaml  update_bindings.sh  wownero_wallet2_api_c.h
impls/monero.php/: ffi.php
impls/monero.rs/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
impls/monero.rs/example/: Cargo.toml  README.md
impls/monero.rs/example/src/: main.rs
impls/monero.rs/scripts/: build_monero_c.sh
impls/monero.rs/src/: bindings.rs  lib.rs  main.rs
impls/monero.rs/tests/: integration_tests.rs
impls/monero.ts/: .gitignore  README.md  checksum.ts  checksum_monero.ts  checksum_wownero.ts  checksum_zano.ts  mod.ts  monero_bindings.ts  utils.ts  wallet.ts  wallet_manager.ts
impls/monero_rust/: .gitignore  Cargo.toml  README.md  build.rs
impls/monero_rust/scripts/: build_monero_c.sh
impls/monero_rust/src/: lib.rs  main.rs
libbridge/: CMakeLists.txt
libbridge/src/main/cpp/: helpers.cpp  helpers.hpp  wallet2_api.h  wallet2_api_c.cpp  wallet2_api_c.h  wallet2_api_c_nocomm.h
monero_libwallet2_api_c/: CMakeLists.txt  monero_libwallet2_api_c.exp
monero_libwallet2_api_c/src/main/cpp/: helpers.cpp  helpers.hpp  monero_checksum.h  wallet2_api_c.cpp  wallet2_api_c.h
patches/: 0001-background-sync.patch  0002-airgap.patch  0004-fix-build-issues.patch  0004-fix-build.patch  0007-downgrade-cmake-version-so-LIB_DEPENDS-shows-up.patch
patches/monero/: 0000-polyseed.patch  0001-polyseed.patch  0001-wallet-background-sync-with-just-the-view-key.patch  0002-fix-missing-___clear_cache-when-targetting-iOS.patch  0002-store-crash-fix.patch  0002-wallet-background-sync-with-just-the-view-key.patch  0003-Update-android-ndk.patch  0003-airgap.patch  0003-coin-control.patch  0003-store-crash-fix.patch  0004-Update-android-ndk.patch  0004-coin-control.patch  0004-uint64_t-missing-definition-fix.patch  0005-fix-build-issues.patch  0005-uint64_t-missing-definition-fix.patch  0005-use-proper-error-handling-in-get_seed.patch  0006-UR-functions.patch  0006-fix-make-debug-test-target.patch  0006-fix-missing-___clear_cache-when-targetting-iOS.patch  0006-macos-build-fix.patch  0006-use-proper-error-handling-in-get_seed.patch  0007-UR-functions.patch  0007-add-dummy-device-for-ledger.patch  0007-fix-make-debug-test-target.patch  0007-fix-missing-___clear_cache-when-targetting-iOS.patch  0008-add-dummy-device-for-ledger.patch  0008-fix-missing-___clear_cache-when-targetting-iOS.patch  0008-polyseed.patch  0009-Add-recoverDeterministicWalletFromSpendKey.patch  0009-coin-control.patch  0009-polyseed.patch  0010-Add-hex-encoding-and-tx-key-getter-for-PendingTransc.patch  0010-coin-control.patch  0011-Add-hex-encoding-and-tx-key-getter-for-PendingTransc.patch  0011-Add-recoverDeterministicWalletFromSpendKey.patch  0011-store-crash-fix.patch  0012-Add-recoverDeterministicWalletFromSpendKey.patch  0012-WIP-UR-functions.patch  0012-add-monero-submodule-support.patch  0013-android-ndk-version-bump.patch  (+19 more)
patches/wownero/: 0000-fix-wallet_api-compilation-target.patch  0000-polyseed.patch  0001-Fix-wallet_api-compilation-target-https-git.wownero..patch  0001-polyseed.patch  0001-wallet-background-sync-with-just-the-view-key.patch  0002-background-sync.patch  0002-fix-is_trivially_copyable.patch  0002-fix-missing-___clear_cache-when-targetting-iOS.patch  0002-polyseed-support.patch  0002-polyseed.patch  0003-airgap.patch  0003-fix-is_trivially_copyable.patch  0003-store-crash-fix.patch  0003-wallet-background-sync-with-just-the-view-key.patch  0004-Update-android-ndk.patch  0004-airgap.patch  0004-coin-control.patch  0004-store-crash-fix.patch  0005-Update-android-ndk.patch  0005-coin-control.patch  0005-fix-build.patch  0005-uint64_t-missing-definition-fix.patch  0006-fix-build.patch  0006-macos-build-fix.patch  0006-uint64_t-missing-definition-fix.patch  0006-use-proper-error-handling-in-get_seed.patch  0007-FIX-wallet-listener-crashing.patch  0007-UR-functions.patch  0007-macos-build-fix.patch  0007-use-proper-error-handling-in-get_seed.patch  0008-FIX-wallet-listener-crashing.patch  0008-UR-functions.patch  0008-add-dummy-device-for-ledger.patch  0008-fix-missing-___clear_cache-when-targetting-iOS.patch  0009-add-dummy-device-for-ledger.patch  0009-fix-missing-___clear_cache-when-targetting-iOS.patch  0009-polyseed.patch  0010-build-wownero-seed.patch  0010-coin-control.patch  0010-polyseed.patch  (+21 more)
patches/zano/: 0001-add-missing-include.patch  0001-added-monero-s-contirb-depends-system.patch  0002-add-missing-include.patch  0002-fix-build-issues.patch  0003-boost-fix-filenames.patch  0003-fix-mingw-build-issues.patch  0004-update-tor-connect.patch  0005-fix-ios-builds.patch  0005-wip-fixes-for-macos.patch  0006-fix-mingw-build-issues.patch  0006-use-boost-filesystem-instead-of-stdfs.patch  0007-fix-mingw-build-issues.patch  0008-increase-max-password.patch  0008-update-tor-connect.patch  0009-fix-ios-builds.patch
tests/: compare.ts  download_deps.ts  integration.test.ts  regression.test.ts  utils.ts
wownero_libwallet2_api_c/: wownero_libwallet2_api_c.exp
zano_libwallet2_api_c/: CMakeLists.txt  zano_libwallet2_api_c.exp
(+65 files in other folders)
