[package]
name = "monero_rust"
version = "0.0.1"
edition = "2021"
description = "monero_c Rust bindings."
repository = "https://github.com/MrCyjaneK/monero_c"
license = "MIT"
build = "build.rs"

[lib]
name = "monero_rust"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
libc = "0.2"
libloading = "0.8.5"
mockall = "0.13.0"
tempfile = "3.13.0"

[build-dependencies]
bindgen = "0.70.1"

