[package]
name = "monero_rust"
version = "0.0.1"
edition = "2021"
description = "monero_c Rust bindings."
repository = "https://github.com/ManyMath/monero_rust"
license = "MIT"
build = "build.rs"

[lib]
name = "monero_rust"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
libc = "0.2"
libloading = "0.8.5"

[build-dependencies]
bindgen = "0.70.1"

